tests/compile_fail/as_ref/union.stderr
error: `AsRef` cannot be derived for unions
 --> tests/compile_fail/as_ref/union.rs:2:1
  |
2 | union Foo {
  | ^^^^^
